<resources>
    <string name="app_name">Acceso a Datos</string>
    <string name="label_name_file">Nombre del fichero</string>
    <string name="label_content_file">Contenido del fichero</string>
    <string name="label_select_file">Escribe el nombre del fichero</string>
    <string name="label_button_save">Guardar</string>
    <string name="label_button_explorer">Listar Ficheros</string>
    <string name="label_button_show_content">Mostrar contenido</string>
    <string name="label_button_delete_file">Eliminar fichero</string>
    <string name="label_button_file">Fichero</string>
    <string name="label_button_mem">Memoria</string>
    <string name="label_button_reset">Reset</string>
    <string name="label_is_first_time">Es la primera vez</string>
    <string name="label_is_not_first_time">No es la primera vez</string>

    <!-- Shared Preferences Keys -->
    <string name="preference_file_key">ut02_shared_pref</string>
    <string name="preference_file_exercise02">ut02_exercise02</string>
    <string name="preference_file_exercise03">ut03_exercise03</string>
    <string name="preference_encrypt_file_key">ut02_shared_pref_encrypt</string>

    <!-- Text Button -->
    <string name="title_text_ut01">UT-01: Ficheros</string>
    <string name="title_text_ut02">UT-02: Almacenamiento XML: SharedPreferences</string>
    <string name="title_text_ut03">UT-03: Bases de Datos: Room</string>
    <string name="action_text_ex01">Ejercicio 01</string>
    <string name="action_text_ex02">Ejercicio 02</string>
    <string name="action_text_ex03">Ejercicio 03</string>
</resources>